unpackaged/main/default/objects/Course_Mapping__c/Course_Mapping__c.object-meta.xml
<CustomObject>
    <label>Course Mapping</label>
    <nameField>
        <label>Course Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>