unpackaged/main/default/objects/Course_Mapping__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Elective Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>