unpackaged/main/default/objects/Course_Mapping__c/fields/Core_Curriculum_Comments__c.field-meta.xml
<CustomField>
    <fullName>Core_Curriculum_Comments__c</fullName>
    <label>Core Curriculum Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>