unpackaged/main/default/objects/Course_Mapping__c/fields/Core_Curriculum_Credit__c.field-meta.xml
<CustomField>
    <fullName>Core_Curriculum_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Core Curriculum Credit</label>
    <type>Checkbox</type>
</CustomField>