unpackaged/main/default/objects/Course_Mapping__c/fields/Course_Number__c.field-meta.xml
<CustomField>
    <fullName>Course_Number__c</fullName>
    <label>Course Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>