unpackaged/main/default/objects/Course_Mapping__c/fields/Credit_Hours__c.field-meta.xml
<CustomField>
    <fullName>Credit_Hours__c</fullName>
    <inlineHelpText>How many credit hours the Verto Education course will transfer to the university.</inlineHelpText>
    <label>Credit Hours</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>