unpackaged/main/default/objects/Course_Mapping__c/fields/Direct_Equivalent__c.field-meta.xml
<CustomField>
    <fullName>Direct_Equivalent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct Equivalent</label>
    <type>Checkbox</type>
</CustomField>