unpackaged/main/default/objects/Course_Mapping__c/fields/Elective_Credit__c.field-meta.xml
<CustomField>
    <fullName>Elective_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Elective Credit</label>
    <type>Checkbox</type>
</CustomField>