unpackaged/main/default/objects/Course_Mapping__c/fields/No_Transfer_Comments__c.field-meta.xml
<CustomField>
    <fullName>No_Transfer_Comments__c</fullName>
    <label>No Transfer Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>