unpackaged/main/default/objects/Course_Mapping__c/fields/No_Transfer_Reason__c.field-meta.xml
<CustomField>
    <fullName>No_Transfer_Reason__c</fullName>
    <label>No Transfer Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equivalent partner course is at a higher level than the Verto course</fullName>
            </value>
            <value>
                <fullName>Equivalent partner course has higher level prerequisites</fullName>
            </value>
            <value>
                <fullName>Verto course is part of a 2-semester sequence while partner course is just one</fullName>
            </value>
            <value>
                <fullName>Partner course is part of a 2-semester sequence while Verto course is just one</fullName>
            </value>
            <value>
                <fullName>Partner has no equivalent department</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>