unpackaged/main/default/objects/Course_Mapping__c/fields/Transferability__c.field-meta.xml
<CustomField>
    <fullName>Transferability__c</fullName>
    <label>Transferability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Does Not Transfer</fullName>
            </value>
            <value>
                <fullName>Transfers</fullName>
            </value>
            <value>
                <fullName>Direct Transfer</fullName>
                <isActive>false</isActive>
                <label>Direct Transfer</label>
            </value>
            <value>
                <fullName>Elective Credit</fullName>
                <isActive>false</isActive>
                <label>Elective Credit</label>
            </value>
            <value>
                <fullName>General Ed Credit</fullName>
                <isActive>false</isActive>
                <label>General Ed Credit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>