unpackaged/main/default/objects/Course_Mapping__c/fields/University__c.field-meta.xml
<CustomField>
    <fullName>University__c</fullName>
    <label>University</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Course Mappings</relationshipLabel>
    <relationshipName>Course_Mappings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>