unpackaged/main/default/objects/Course_Mapping__c/recordTypes/Direct_Transfer.recordType-meta.xml
<RecordType>
    <fullName>Direct_Transfer</fullName>
    <active>true</active>
    <label>Direct Transfer</label>
</RecordType>