unpackaged/main/default/objects/Course_Mapping__c/recordTypes/Does_Not_Transfer.recordType-meta.xml
<RecordType>
    <fullName>Does_Not_Transfer</fullName>
    <active>true</active>
    <label>Does Not Transfer</label>
</RecordType>