unpackaged/main/default/objects/Course_Mapping__c/recordTypes/Elective_Credit.recordType-meta.xml
<RecordType>
    <fullName>Elective_Credit</fullName>
    <active>true</active>
    <label>Elective Credit</label>
</RecordType>