unpackaged/main/default/objects/Course_Mapping__c/recordTypes/General_Ed_Credit.recordType-meta.xml
<RecordType>
    <fullName>General_Ed_Credit</fullName>
    <active>true</active>
    <label>General Ed Credit</label>
</RecordType>