unpackaged/main/default/objects/Course_Mapping__c/listViews/All_Partners.listView-meta.xml
<ListView>
    <fullName>All_Partners</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All - Partners</label>
    <sharedTo>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>